wayland (1.10.0-2) UNRELEASED; urgency=medium

  * Don't build the documentation on binary-arch only builds. Move the
    build-dependencies needed for the documentation to build-depends-indep.
    Closes: #821170.
  * Move the manpages to libwayland-doc.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Wed, 20 Apr 2016 19:58:36 +0200

wayland (1.10.0-1) unstable; urgency=medium

  * New upstream release

 -- Héctor Orón Martínez <zumbi@debian.org>  Thu, 31 Mar 2016 13:13:12 +0200

wayland (1.9.92-1) experimental; urgency=medium

  * New upstream release, experimental upload.

  [ Hideki Yamane ]
  * debian/control
    - add Build-Depends: libxml2-dev
  * update debian/libwayland-{client,server}0.symbols
  * update debian/watch (Closes: #813484)

 -- Héctor Orón Martínez <zumbi@debian.org>  Thu, 04 Feb 2016 23:22:27 +0100

wayland (1.9.0-1) unstable; urgency=medium

  * New upstream release

 -- Héctor Orón Martínez <zumbi@debian.org>  Sun, 27 Sep 2015 00:08:11 +0200

wayland (1.8.1-1) unstable; urgency=medium

  * New upstream release

 -- Hector Oron <zumbi@debian.org>  Sat, 13 Jun 2015 02:00:30 +0200

wayland (1.7.0-2) unstable; urgency=medium

  * Remove Cyril from Uploaders. Thanks for your past work!
  * Upload to unstable.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Wed, 27 May 2015 00:35:08 +0200

wayland (1.7.0-1) experimental; urgency=medium

  [ Timo Aaltonen ]
  * New upstream release.
  * control: Add xmlto and graphviz to build-depends to build the
    new documentation.
  * libwayland-doc: Add a new package for documentation files.

  [ Hector Oron ]
  * Upload to experimental.

 -- Hector Oron <zumbi@debian.org>  Wed, 06 May 2015 12:35:23 +0200

wayland (1.6.1-2) experimental; urgency=medium

  * Rebuild against upstream tarball.

 -- Hector Oron <zumbi@debian.org>  Sat, 24 Jan 2015 10:39:19 +0100

wayland (1.6.1-1) experimental; urgency=medium

  * New bugfix upstream release:
    - documentation: fix several typoes.