@@ -4,6 +4,7 @@ wayland (1.10.0-2) UNRELEASED; urgency=medium
     build-dependencies needed for the documentation to build-depends-indep.
     Closes: #821170.
   * Move the manpages to libwayland-doc.
+  * Switch to dbgsym packages.
 
  -- Emilio Pozuelo Monfort <pochu@debian.org>  Wed, 20 Apr 2016 19:58:36 +0200
 
